welcome.lessons.welcome.array.notriples.NoTriples.scala.error
noTriples:9: error: not found: value x
	return x
               ^