welcome.lessons.welcome.array.notriples.NoTriples.scala.code
def noTriples(nums:Array[Int]): Boolean = {
	var b=0
	var c=0
	for (i<- 0 to nums.length-1){
		if (nums(i)==b  && b==c)  return false
		c = b
		b = nums(i)
	}
	return x
}
